Added Github Link

--- a/style/personal.css
+++ b/style/personal.css
@@ -215,6 +215,7 @@ ul.a-nav{
 .a-connection-icons li a:hover.behance, .a-connection-icons li a:focus.behance{color:#1769ff;}
 .a-connection-icons li a:hover.instagram, .a-connection-icons li a:focus.instagram{color:#125688;}
 .a-connection-icons li a:hover.linkedin, .a-connection-icons li a:focus.linkedin{color:#287bbc;}
+.a-connection-icons li a:hover.github, .a-connection-icons li a:focus.linkedin{color:#4078c0;}
 /* ======================== */
 
 
