Added comments for the Projects section

--- a/style/personal.css
+++ b/style/personal.css
@@ -18,6 +18,7 @@
 // ... VII. Skills Showcase Style ...... //
 // .. VIII. Hire Me Style .............. //
 // .... IX. Testimonies Style .......... //
+// ..... X. Projects Style ............. //
 // ..................................... //
 // ===================================== */
 
@@ -465,3 +466,13 @@ footer a, footer a:hover, footer a:focus{
  text-align:right;
 }
 /* ===================== */
+
+
+
+
+
+/* ================= //
+// X. Projects Style //
+// ================= */
+
+/* ================= */
