Updated Testimonals Name

--- a/style/personal.css
+++ b/style/personal.css
@@ -464,6 +464,8 @@ footer a, footer a:hover, footer a:focus{
 }
 .a-testimony-message-person{
  text-align:right;
+ font-style:italic;
+ color:#888;
 }
 /* ===================== */
 
