--- a/style/personal.css
+++ b/style/personal.css
@@ -43,14 +43,14 @@
 // II. General Style //
 // ================= */
 body{
- color:#444;
- background-color:#fff;
- font-size:15px;
- overflow-x:hidden;
- font-family: 'Ubuntu', sans-serif;
+    color:#444;
+    background-color:#fff;
+    font-size:15px;
+    overflow-x:hidden;
+    font-family: 'Ubuntu', sans-serif;
 }
 a, a:hover{
- color:#B52424;
+    color:#B52424;
 }
 /* ================= */
 
@@ -62,114 +62,114 @@ a, a:hover{
 // III. Header Style //
 // ================= */
 header{
- padding:20px;
- background-color:#fff;
- border-style:solid;
- border-width:0 0 1px 0;
- border-color:#E5E5E5;
+    padding:20px;
+    background-color:#fff;
+    border-style:solid;
+    border-width:0 0 1px 0;
+    border-color:#E5E5E5;
 }
 .a-logo{
- float:left;
+    float:left;
 }
 .a-logo, .a-logo a, .a-logo img{
- display:inline-block
+    display:inline-block
 }
 .a-logo img{
- width:auto;
- height:50px;
+    width:auto;
+    height:50px;
 }
 .a-nav-holder{
- float:right;
+    float:right;
 }
 ul.a-nav{
- display:table;
- height:50px;
- list-style-type:none;
- margin:0;
- padding:0;
+    display:table;
+    height:50px;
+    list-style-type:none;
+    margin:0;
+    padding:0;
 }
 .a-nav li{
- display:table-cell;
- vertical-align:middle;
- height:100%;
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
 }
 .a-nav li a{
- margin:0 10px;
- text-decoration:none;
- font-size:18px;
- color:#444;
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
+    margin:0 10px;
+    text-decoration:none;
+    font-size:18px;
+    color:#444;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
 }
 .a-nav li a.a-nav-hire{
- border-width:3px;
- border-style:solid;
- border-color:#CD3C2A;
- border-radius:5px;
- background-color:#CD3C2A;
- padding:10px 20px;
- color:#fff;
+    border-width:3px;
+    border-style:solid;
+    border-color:#CD3C2A;
+    border-radius:5px;
+    background-color:#CD3C2A;
+    padding:10px 20px;
+    color:#fff;
 }
 .a-nav li a.a-nav-hire:hover,
 .a-nav li a.a-nav-hire:focus{
- background-color:#fff;
- color:#CD3C2A;
- text-shadow:none;
+    background-color:#fff;
+    color:#CD3C2A;
+    text-shadow:none;
 }
 .a-nav li a.a-nav-hire:hover i,
 .a-nav li a.a-nav-hire:focus i{
- color:#ff9999;
+    color:#ff9999;
 }
 .a-nav li a:hover,
 .a-nav li a:focus,
 .a-nav li.active a{
- text-decoration:none;
- color:#CD3C2A;
+    text-decoration:none;
+    color:#CD3C2A;
 }
 @media(max-width:991px){
-.a-logo img, ul.a-nav{
- height:30px;
-}
+    .a-logo img, ul.a-nav{
+        height:30px;
+    }
 }
 .a-nav-holder-mobile{
- display:none;
- border-style:solid;
- border-width:0 0 1px 0;
- border-color:#E5E5E5;
+    display:none;
+    border-style:solid;
+    border-width:0 0 1px 0;
+    border-color:#E5E5E5;
 }
 .a-nav-mobile{
- display:block;
- margin:0;
- padding:0;
- list-style-type:none;
+    display:block;
+    margin:0;
+    padding:0;
+    list-style-type:none;
 }
 .a-nav-mobile li{
- display:block;
- margin:0 0 1px 0;
- padding:0;
+    display:block;
+    margin:0 0 1px 0;
+    padding:0;
 }
 .a-nav-mobile li:last-child{
- margin:0;
+    margin:0;
 }
 .a-nav-mobile li a{
- display:block;
- text-decoration:none;
- padding:10px;
- background-color:#E5E5E5;
- text-align:center;
- font-size:14px;
- color:#444;
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
+    display:block;
+    text-decoration:none;
+    padding:10px;
+    background-color:#E5E5E5;
+    text-align:center;
+    font-size:14px;
+    color:#444;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
 }
 .a-nav-mobile li a:hover,
 .a-nav-mobile li a:focus{
- text-decoration:none;
- background-color:#fff;
- color:#CD3C2A;
+    text-decoration:none;
+    background-color:#fff;
+    color:#CD3C2A;
 }
 .a-nav-mobile li.active a{
- color:#CD3C2A;
+    color:#CD3C2A;
 }
 /* ================= */
 
@@ -181,33 +181,33 @@ ul.a-nav{
 // IV. Connection Bar Style //
 // ======================== */
 .a-connection-bar{
- background-color:#E5E5E5;
- font-size:13px;
+    background-color:#E5E5E5;
+    font-size:13px;
 }
 .a-connection-text,
 .a-connection-icons{
- margin:0;
- padding:0;
- list-style-type:none;
- display:inline-block;
- color:#7A7A7A;
+    margin:0;
+    padding:0;
+    list-style-type:none;
+    display:inline-block;
+    color:#7A7A7A;
 }
 .a-connection-text{
- float:left;
+    float:left;
 }
 .a-connection-icons{
- float:right;
+    float:right;
 }
 .a-connection-text li,
 .a-connection-icons li{
- padding:5px;
- display:inline-block;
+    padding:5px;
+    display:inline-block;
 }
 .a-connection-icons li a{
- text-decoration:none;
- color:#7A7A7A;
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
+    text-decoration:none;
+    color:#7A7A7A;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
 }
 .a-connection-icons li a:hover.facebook, .a-connection-icons li a:focus.facebook{color:#3a5795;}
 .a-connection-icons li a:hover.google-plus, .a-connection-icons li a:focus.google-plus{color:#CD3C2A;}
@@ -228,26 +228,26 @@ ul.a-nav{
 // V. Footer Style //
 // =============== */
 footer{
- display:block;
- background-color:#E5E5E5;
- font-size:13px;
- color:#7A7A7A;
- text-align:center;
- padding:20px 0;
+    display:block;
+    background-color:#E5E5E5;
+    font-size:13px;
+    color:#7A7A7A;
+    text-align:center;
+    padding:20px 0;
 }
 footer a, footer a:hover, footer a:focus{
- color:#7A7A7A;
+    color:#7A7A7A;
 }
 .a-footer-pull-left{
- text-align:left;
+    text-align:left;
 }
 .a-footer-pull-right{
- text-align:right;
+    text-align:right;
 }
 @media(max-width:991px){
-.a-footer-pull-left, .a-footer-pull-right{
- text-align:center;
-}
+    .a-footer-pull-left, .a-footer-pull-right{
+        text-align:center;
+    }
 }
 /* =============== */
 
@@ -259,62 +259,62 @@ footer a, footer a:hover, footer a:focus{
 // VI. Jumbotron Style //
 // =================== */
 .a-personal-jumbotron-wallpaper{
- background-image:url("../gfx/jumbotron-background.jpeg");
- background-repeat:no-repeat;
- background-position:center;
- background-size:cover;
+    background-image:url("../gfx/jumbotron-background.jpeg");
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size:cover;
 }
 .a-personal-jumbotron{
- text-align:center;
- background-color:rgba(0,0,0,.5);
- margin-bottom:0;
- color:#fff;
- text-shadow: 0 1px 5px rgba(0,0,0,.7);
- -moz-box-shadow:inset 0 -6px 4px 0 rgba(0, 0, 0, 0.2), inset 0 6px 4px 0 rgba(0, 0, 0, 0.2);
- -webkit-box-shadow:inset 0 -6px 4px 0 rgba(0, 0, 0, 0.2), inset 0 6px 4px 0 rgba(0, 0, 0, 0.2);
- box-shadow:inset 0 -6px 4px 0 rgba(0, 0, 0, 0.2), inset 0 6px 4px 0 rgba(0, 0, 0, 0.2);
+    text-align:center;
+    background-color:rgba(0,0,0,.5);
+    margin-bottom:0;
+    color:#fff;
+    text-shadow: 0 1px 5px rgba(0,0,0,.7);
+    -moz-box-shadow:inset 0 -6px 4px 0 rgba(0, 0, 0, 0.2), inset 0 6px 4px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow:inset 0 -6px 4px 0 rgba(0, 0, 0, 0.2), inset 0 6px 4px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:inset 0 -6px 4px 0 rgba(0, 0, 0, 0.2), inset 0 6px 4px 0 rgba(0, 0, 0, 0.2);
 }
 .a-personal-jumbotron img{
- width:120px;
- height:120px;
- border-radius:100%;
- border-width:2px;
- border-style:solid;
- border-color:#fff;
- vertical-align:bottom;
- -moz-box-shadow:0 0 0 10px rgba(0,0,0,.3);
- -webkit-box-shadow:0 0 0 10px rgba(0,0,0,.3);
- box-shadow:0 0 0 10px rgba(0,0,0,.3);
- margin-bottom:5px;
+    width:120px;
+    height:120px;
+    border-radius:100%;
+    border-width:2px;
+    border-style:solid;
+    border-color:#fff;
+    vertical-align:bottom;
+    -moz-box-shadow:0 0 0 10px rgba(0,0,0,.3);
+    -webkit-box-shadow:0 0 0 10px rgba(0,0,0,.3);
+    box-shadow:0 0 0 10px rgba(0,0,0,.3);
+    margin-bottom:5px;
 }
 .a-personal-jumbotron h2{
- font-family: 'Courgette', cursive;
- font-size:40px;
+    font-family: 'Courgette', cursive;
+    font-size:40px;
 }
 .a-personal-jumbotron-button{
- margin-top:5px;
+    margin-top:5px;
 }
 .a-personal-jumbotron-button a{
- display:inline-block;
- text-decoration:none;
- text-shadow:none;
- border-width:2px;
- border-style:solid;
- border-color:#fff;
- border-radius:5px;
- background-color:#3987CC;
- padding:10px 20px;
- color:#fff;
- font-size:17px;
- -moz-box-shadow:0 0 10px 3px rgba(0,0,0,.3);
- -webkit-box-shadow:0 0 10px 3px rgba(0,0,0,.3);
- box-shadow:0 0 10px 3px rgba(0,0,0,.3);
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
+    display:inline-block;
+    text-decoration:none;
+    text-shadow:none;
+    border-width:2px;
+    border-style:solid;
+    border-color:#fff;
+    border-radius:5px;
+    background-color:#3987CC;
+    padding:10px 20px;
+    color:#fff;
+    font-size:17px;
+    -moz-box-shadow:0 0 10px 3px rgba(0,0,0,.3);
+    -webkit-box-shadow:0 0 10px 3px rgba(0,0,0,.3);
+    box-shadow:0 0 10px 3px rgba(0,0,0,.3);
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
 }
 .a-personal-jumbotron-button a:hover,
 .a-personal-jumbotron-button a:focus{
- background-color:rgba(255,255,255,.1);
+    background-color:rgba(255,255,255,.1);
 }
 /* =================== */
 
@@ -326,25 +326,25 @@ footer a, footer a:hover, footer a:focus{
 // VII. Skills Showcase Style //
 // ========================== */
 .a-skills-showcase{
- margin-bottom:0;
- background-color:#9b59b6;
- color:#fff;
- text-align:center;
+    margin-bottom:0;
+    background-color:#9b59b6;
+    color:#fff;
+    text-align:center;
 }
 .a-skills-showcase h1{
- font-family: 'Montserrat', sans-serif;
- font-size:50px;
+    font-family: 'Montserrat', sans-serif;
+    font-size:50px;
 }
 .a-skills-showcase hr{
- border-width:3px 0 0 0;
- border-style:solid;
- border-color:#fff;
- width:50px;
- margin-top:10px;
- margin-bottom:10px;
+    border-width:3px 0 0 0;
+    border-style:solid;
+    border-color:#fff;
+    width:50px;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 .a-skills-showcase-title{
- margin-bottom:15px;
+    margin-bottom:15px;
 }
 /* ========================== */
 
@@ -356,35 +356,35 @@ footer a, footer a:hover, footer a:focus{
 // VIII. Hire Me Style //
 // =================== */
 .a-hire-me-jumbotron{
- margin-bottom:0;
- background-color:#f6653c;
- color:#fff;
- text-align:center;
+    margin-bottom:0;
+    background-color:#f6653c;
+    color:#fff;
+    text-align:center;
 }
 .a-hire-me-jumbotron h1{
- font-family: 'Kaushan Script', cursive;
- font-size:35px;
- margin-bottom:20px;
+    font-family: 'Kaushan Script', cursive;
+    font-size:35px;
+    margin-bottom:20px;
 }
 .a-hire-me-jumbotron a{
- text-decoration:none;
- display:inline-block;
- border-width:3px;
- border-style:solid;
- border-color:#fff;
- border-radius:5px;
- background-color:#fff;
- padding:10px 20px;
- color:#f6653c;
- font-size:18px;
- font-weight:bold;
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
+    text-decoration:none;
+    display:inline-block;
+    border-width:3px;
+    border-style:solid;
+    border-color:#fff;
+    border-radius:5px;
+    background-color:#fff;
+    padding:10px 20px;
+    color:#f6653c;
+    font-size:18px;
+    font-weight:bold;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
 }
 .a-hire-me-jumbotron a:hover,
 .a-hire-me-jumbotron a:focus{
- color:#fff;
- background-color:#f6653c;
+    color:#fff;
+    background-color:#f6653c;
 }
 /* =================== */
 
@@ -396,76 +396,76 @@ footer a, footer a:hover, footer a:focus{
 // IX. Testimonies Style //
 // ===================== */
 .a-testimonies-jumbotron{
- background-color:#4c5867;
- color:#fff;
- margin-bottom:0;
+    background-color:#4c5867;
+    color:#fff;
+    margin-bottom:0;
 }
 .a-testimonies-title{
- text-align:center;
+    text-align:center;
 }
 .a-testimonies-title h1{
- font-family: 'Montserrat', sans-serif;
- font-size:50px;
+    font-family: 'Montserrat', sans-serif;
+    font-size:50px;
 }
 .a-testimonies-title hr{
- border-width:3px 0 0 0;
- border-style:solid;
- border-color:#fff;
- width:50px;
- margin-top:10px;
- margin-bottom:10px;
+    border-width:3px 0 0 0;
+    border-style:solid;
+    border-color:#fff;
+    width:50px;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 .a-testimonies-title{
- margin-bottom:15px;
+    margin-bottom:15px;
 }
 .a-testimony-holder{
- position:relative;
- margin-bottom:15px;
+    position:relative;
+    margin-bottom:15px;
 }
 .a-testimony-message{
- background-color:#fff;
- border-radius:5px;
- color:#444;
- margin-left:110px;
- padding:10px;
- min-height:100px;
- position:relative;
- z-index:1;
- font-size:13px;
+    background-color:#fff;
+    border-radius:5px;
+    color:#444;
+    margin-left:110px;
+    padding:10px;
+    min-height:100px;
+    position:relative;
+    z-index:1;
+    font-size:13px;
 }
 .a-testimony-holder img{
- width:90px;
- height:90px;
- position:absolute;
- top:0;
- left:0;
- border-width:2px;
- border-style:solid;
- border-color:#fff;
- border-radius:100%;
+    width:90px;
+    height:90px;
+    position:absolute;
+    top:0;
+    left:0;
+    border-width:2px;
+    border-style:solid;
+    border-color:#fff;
+    border-radius:100%;
 }
 .a-testimony-arrow{
- position:absolute;
- top:30px;
- left:100px;
- width:0; 
- height:0; 
- border-top:15px solid transparent;
- border-bottom:15px solid transparent; 
- border-right:15px solid #fff;
- z-index:2;
+    position:absolute;
+    top:30px;
+    left:100px;
+    width:0;
+    height:0;
+    border-top:15px solid transparent;
+    border-bottom:15px solid transparent;
+    border-right:15px solid #fff;
+    z-index:2;
 }
 .a-testimony-message-inside{
- text-align:justify;
- margin-bottom:5px;
+    text-align:justify;
+    margin-bottom:5px;
 }
 .a-testimony-message-inside i{
- color:#808080;
+    color:#808080;
 }
 .a-testimony-message-person{
- text-align:right;
- font-style:italic;
- color:#888;
+    text-align:right;
+    font-style:italic;
+    color:#888;
 }
 /* ===================== */
 
@@ -477,112 +477,121 @@ footer a, footer a:hover, footer a:focus{
 // X. Projects Style //
 // ================= */
 .a-projects-jumbotron{
- margin-bottom:0;
- background-color:#0074BF;
- color:#fff;
+    margin-bottom:0;
+    background-color:#0074BF;
+    color:#fff;
 }
 .a-projects-title{
- text-align:center;
+    text-align:center;
 }
 .a-projects-title h1{
- font-family: 'Montserrat', sans-serif;
- font-size:50px;
+    font-family: 'Montserrat', sans-serif;
+    font-size:50px;
 }
 .a-projects-title hr{
- border-width:3px 0 0 0;
- border-style:solid;
- border-color:#fff;
- width:50px;
- margin-top:10px;
- margin-bottom:10px;
-}
-.a-projects-holder{
- position:relative;
- border-width:1px;
- border-style:solid;
- border-color:#444;
- background-color:#fff;
- background-image:url("../gfx/stripe.png");
- background-repeat:repeat;
- background-position:center;
- margin-bottom:20px;
-}
-.a-projects-holder:before {
- display:block;
- content:"";
- width:100%;
- padding-top:60%;
-}
-.a-projects-holder > a{
- display:block;
- position:absolute;
- top:0;
- left:0;
- right:0;
- bottom:0;
- border-width:1px;
- border-style:solid;
- border-color:#ADADAD;
- background-color:#fff;
- background-repeat:no-repeat;
- background-position:center;
- background-size:cover;
- margin:5px;
- text-decoration:none;
-}
-.a-projects-holder  a:hover,
-.a-projects-holder a:focus{
- text-decoration:none;
-}
-.a-projects-detail{
- display:table;
- text-align:center;
- width:100%;
- height:100%;
- background-color:rgba(255,255,255,.8);
- opacity:0;
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
-}
-.a-projects-holder > a:hover .a-projects-detail,
-.a-projects-holder > a:focus .a-projects-detail{
- opacity:1;
-}
-.a-projects-detail .a-projects-detail-cell{
- display:table-cell;
- vertical-align:middle;
- text-transform:uppercase;
- color:#444;
-}
-.a-projects-detail hr{
- margin:5px auto;
- padding:0;
- border-width:1px 0 0 0;
- border-style:solid;
- border-color:#333333;
- width:50px;
- max-width:100%;
+    border-width:3px 0 0 0;
+    border-style:solid;
+    border-color:#fff;
+    width:50px;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 .a-projects-more{
- text-align:center;
+    text-align:center;
 }
 .a-projects-more a{
- text-decoration:none;
- display:inline-block;
- border-width:3px;
- border-style:solid;
- border-color:#fff;
- border-radius:5px;
- background-color:#fff;
- padding:10px 20px;
- color:#0074BF;
- font-size:18px;
- font-weight:bold;
- -webkit-transition:all 0.3s 0s ease-out;
- transition:all 0.3s 0s ease-out;
+    text-decoration:none;
+    display:inline-block;
+    border-width:3px;
+    border-style:solid;
+    border-color:#fff;
+    border-radius:5px;
+    background-color:#fff;
+    padding:10px 20px;
+    color:#0074BF;
+    font-size:18px;
+    font-weight:bold;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
 }
 .a-projects-more a:hover, .a-projects-more a:focus{
- color:#fff;
- background-color:#0074BF;
+    color:#fff;
+    background-color:#0074BF;
+}
+.a-projects-holder{
+    background-color:#fff;
+    box-shadow:0 0 5px rgba(0,0,0,0.3);
+    border-width:1px;
+    border-style:solid;
+    border-color:#bbb;
+    overflow:hidden;
+    border-radius:5px;
+    margin-bottom:20px;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
+}
+.a-projects-holder:hover{
+    box-shadow:0 0 5px rgba(0,0,0,0.8);
+}
+.a-projects-holder > a.a-projects-image-link{
+    margin-bottom:10px;
+    border-width:0 0 1px 0;
+    border-style:solid;
+    border-color:#ddd;
+    display:block;
+    opacity:1;
+    background-color:#bbb;
+    border-radius:5px 5px 0 0;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
+}
+.a-projects-holder > a.a-projects-image-link:hover,
+.a-projects-holder > a.a-projects-image-link:focus{
+    opacity:.8;
+}
+.a-projects-holder > a.a-projects-image-link > img{
+    width:100%;
+    display:block;
+    border-radius:5px 5px 0 0;
+    vertical-align:bottom;
+}
+.a-projects-holder > a.a-projects-title{
+    font-size:15px;
+    text-transform:uppercase;
+    font-weight:bold;
+    padding:0;
+    color:#444;
+    margin:0 10px 8px 10px;
+    text-decoration:none;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
+}
+.a-projects-holder > a.a-projects-title:hover,
+.a-projects-holder > a.a-projects-title:focus{
+    color:#CD3C2A;
+    text-decoration:none;
+}
+.a-projects-holder > p{
+    margin:0 10px 10px 10px;
+    padding:0;
+    font-size:12px;
+    color:#666;
+}
+.a-projects-holder > .a-projects-links{
+    padding:5px 10px;
+    border-width:1px 0 0 0;
+    border-style:solid;
+    border-color:#ddd;
+    text-align:right;
+    font-size:14px;
+}
+.a-projects-holder > .a-projects-links > a{
+    color:#666;
+    -webkit-transition:all 0.3s 0s ease-in-out;
+    transition:all 0.3s 0s ease-in-out;
+}
+.a-projects-holder > .a-projects-links > a:hover,
+.a-projects-holder > .a-projects-links > a:focus{
+    color:#CD3C2A;
 }
 /* ================= */
