behance icon changed

--- a/style/personal.css
+++ b/style/personal.css
@@ -667,7 +667,7 @@ ul.a-about-me-social > li > a > span > i.fa-pinterest{color:#bd081c;}
 ul.a-about-me-social > li > a > span > i.fa-behance{color:#1769ff;}
 ul.a-about-me-social > li > a > span > i.fa-instagram{color:#125688;}
 ul.a-about-me-social > li > a > span > i.fa-linkedin{color:#287bbc;}
-ul.a-about-me-social > li > a > span > i.fa-github{color:#4078c0;}
+ul.a-about-me-social > li > a > span > i.fa-github-alt{color:#4078c0;}
 ul.a-about-me-social > li > a > span > i{
     -webkit-transition:all 0.3s 0s ease-in-out;
     transition:all 0.3s 0s ease-in-out;
