changed the box shadow of the display picture on the front page

--- a/style/personal.css
+++ b/style/personal.css
@@ -285,9 +285,9 @@ footer a, footer a:hover, footer a:focus{
     border-style:solid;
     border-color:#fff;
     vertical-align:bottom;
-    -moz-box-shadow:0 0 0 10px rgba(0,0,0,.3);
-    -webkit-box-shadow:0 0 0 10px rgba(0,0,0,.3);
-    box-shadow:0 0 0 10px rgba(0,0,0,.3);
+    -moz-box-shadow:0 0 10px 3px rgba(0,0,0,.3);
+    -webkit-box-shadow:0 0 10px 3px rgba(0,0,0,.3);
+    box-shadow:0 0 10px 3px rgba(0,0,0,.3);
     margin-bottom:5px;
 }
 .a-personal-jumbotron h2{
