--- a/styles/app.css
+++ b/styles/app.css
@@ -1073,7 +1073,7 @@ footer a .vertical-align-holder{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255,255,255,.75);
+    background-color: #fff;
     -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
     animation: sk-foldCubeAngle 2.4s infinite linear both;
     -webkit-transform-origin: 100% 100%;
