--- a/styles/app.css
+++ b/styles/app.css
@@ -29,6 +29,7 @@
 @import 'https://fonts.googleapis.com/css?family=Abel';
 @import 'https://fonts.googleapis.com/css?family=Passion+One';
 @import 'https://fonts.googleapis.com/css?family=Miriam+Libre';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 /* ========== */
 
 /* ================= //
@@ -1047,6 +1048,12 @@ footer a .vertical-align-holder{
 .loading-screen .vertical-align-holder{
     height: 100vh;
     width: 100%;
+}
+.loading-screen .loading-text{
+    color: #fff;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 20px;
+    text-align: center;
 }
 .sk-folding-cube {
     margin: 20px auto;
