--- a/styles/app.css
+++ b/styles/app.css
@@ -630,7 +630,7 @@ footer a .vertical-align-holder{
 // VIII. Dribbble Section Style //
 // ============================ */
 .dribbble-wallpaper{
-    background-image: url("../graphics/dribbble-background.jpeg");
+    background-image: url("../graphics/dribbble-background.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -766,7 +766,7 @@ footer a .vertical-align-holder{
 // IX. CodePen Section Style //
 // ========================= */
 .codepen-wallpaper{
-    background-image: url("../graphics/codepen-background.jpeg");
+    background-image: url("../graphics/codepen-background.jpg");
     background-position: center;
     background-size: cover;
 }
