--- a/styles/app.css
+++ b/styles/app.css
@@ -22,14 +22,7 @@
 /* ========== //
 // I. Plug-in //
 // ========== */
-@import 'https://fonts.googleapis.com/css?family=Abril+Fatface';
-@import 'https://fonts.googleapis.com/css?family=Exo:400,700';
-@import 'https://fonts.googleapis.com/css?family=Poiret+One';
-@import 'https://fonts.googleapis.com/css?family=Play';
-@import 'https://fonts.googleapis.com/css?family=Abel';
-@import 'https://fonts.googleapis.com/css?family=Passion+One';
-@import 'https://fonts.googleapis.com/css?family=Miriam+Libre';
-@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+@import 'https://fonts.googleapis.com/css?family=Abril+Fatface|Exo:400,700|Poiret+One|Play|Abel|Passion+One|Miriam+Libre|Open+Sans+Condensed:300';
 /* ========== */
 
 /* ================= //
